--- a/config.json
+++ b/config.json
@@ -23,5 +23,6 @@
       { "label": "github", "href": "https://github.com/datopian/flowershow", "name": "Our GitHub" }
     ]
   },
-  "contentExclude": ["/excalidraw", "/journal", "/meta", "/notes", "/people", "/public"]
+  "contentExclude": ["/excalidraw", "/journal", "/meta", "/notes", "/people", "/public"],
+  "showEditLink": true
 }
