--- a/config.json
+++ b/config.json
@@ -18,6 +18,6 @@
       { "label": "github", "href": "https://github.com/datopian/flowershow", "name": "Our GitHub" }
     ]
   },
-  "contentExclude": ["/excalidraw", "/journal", "/meta", "/people", "/public"],
+  "contentExclude": ["/excalidraw", "/journal", "/meta", "/people", "/public", "/blog/archive"],
   "showEditLink": true
 }
