--- a/config.json
+++ b/config.json
@@ -19,6 +19,6 @@
       { "label": "github", "href": "https://github.com/datopian/flowershow", "name": "Our GitHub" }
     ]
   },
-  "contentExclude": ["/excalidraw", "/journal", "/meta", "/people", "/public", "/blog/archive"],
+  "contentExclude": ["/excalidraw", "/journal", "/meta", "/people", "/public", "/blog/archive", "/docs/self-hosted", "/self-hosted.md"],
   "showEditLink": true
 }
