--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
         "href": "https://github.com/flowershow/flowershow/discussions",
         "name": "Forum"
       },
-      { "href": "/about", "name": "About" },
+      { "href": "/flowershow-for-blogs", "name": "Flowershow for Blogs" },
       { "href": "https://demo.flowershow.app/", "name": "Demo" },
       { "href": "https://cloud.flowershow.app", "name": "Login/Signup" }
     ],
